Fixed an alignment issue on mobile and removed theme readme

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -19,7 +19,9 @@ li {
 p.small {
     font-size: 16px;
 }
-
+ul{
+    padding-left: 0px !important;
+}
 a,
 a:hover,
 a:focus,
